test/expected/explain_o_less_rck_b=default.out
struct S; explain bool operator<(S const&) = default
            ^
13: error: default member operator < must also be const
